tools/nika-engine/src/runtime/runner/snapshots/nika_engine__runtime__runner__tests_golden_verbs__golden_agent_mock.snap
---
source: nika-engine/src/runtime/runner/tests_golden_verbs.rs
expression: "golden_snapshot(&runner, \"research\")"
---
lifecycle:
  - WorkflowStarted
  - TaskScheduled(research)
  - TaskStarted(research)
  - TaskCompleted(research)
  - WorkflowCompleted
output: Mock response from rig agent
