tools/nika-engine/src/runtime/runner/snapshots/nika_engine__runtime__runner__tests_golden_verbs__golden_exec_hello.snap
---
source: nika-engine/src/runtime/runner/tests_golden_verbs.rs
expression: "golden_snapshot(&runner, \"greet\")"
---
lifecycle:
  - WorkflowStarted
  - TaskScheduled(greet)
  - TaskStarted(greet)
  - TaskCompleted(greet)
  - WorkflowCompleted
output: hello golden
