tools/nika-engine/src/runtime/runner/snapshots/nika_engine__runtime__runner__tests_golden_verbs__golden_fetch_placeholder_lifecycle.snap
---
source: nika-engine/src/runtime/runner/tests_golden_verbs.rs
expression: lifecycle
---
- WorkflowStarted
- TaskScheduled(stub)
- TaskStarted(stub)
- TaskCompleted(stub)
- TaskScheduled(consume)
- TaskStarted(consume)
- TaskCompleted(consume)
- WorkflowCompleted
