tools/nika-engine/src/runtime/runner/snapshots/nika_engine__runtime__runner__tests_golden_verbs__golden_infer_mock_lifecycle.snap
---
source: nika-engine/src/runtime/runner/tests_golden_verbs.rs
expression: lifecycle
---
- WorkflowStarted
- TaskScheduled(summarize)
- TaskStarted(summarize)
- TaskCompleted(summarize)
- WorkflowCompleted
