tools/nika-engine/src/runtime/runner/snapshots/nika_engine__runtime__runner__tests_golden_verbs__golden_invoke_log_lifecycle.snap
---
source: nika-engine/src/runtime/runner/tests_golden_verbs.rs
expression: lifecycle
---
- WorkflowStarted
- TaskScheduled(log_message)
- TaskStarted(log_message)
- TaskCompleted(log_message)
- WorkflowCompleted
